--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <h1>Metodo de pago</h1>
             <div class="content-select">
                 <select>
-                    <option>Efecto</option>
+                    <option>Efectivo</option>
                     <option>VISA</option>
                     <option>Otso</option>
                 </select>
