--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../IMG/Pizza-icon_30282.png" type="image/x-icon">
     <link rel="stylesheet" href="CSS/pitsa.css">
     <link rel="stylesheet" href="CSS/radio.css">
-    <title>Document</title>
+    <title>Pancho's Pizza</title>
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 </head>
 
